--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               </div>
           <div class="card-body"><h2>Wash</h2>
           <p>P65.00</p>
-          <p>60 minutes</p>
+          <p>37 minutes</p>
           <h2>Dry</h2>
           <p>P65.00</p>
           <p>30 minutes</p>
@@ -216,8 +216,8 @@
               </div>
           <div class="card-body"><h2>Dry</h2>
           <p>P20.00</p>
-          <p>10 minutes</p>
-          <h2>Fold</h2>
+          <p>6 minutes</p>
+          <h2>Full Service</h2>
           <p>P40.00</p>
           <p>per load min of 5kg</p>
           <a class="btn btn-lg btn-block btn-outline-primary" type="button" href="#cta" role="button" aria-expanded="false" aria-controls="collapseExample">Inquire</a>
@@ -238,7 +238,7 @@
 
       <h3 class="cta-header">We are happy to serve you.</h3>
       <h2>Business Hours</h2>
-      <p>7:00 AM to 9:00 PM</p>
+      <p>7:00 AM to 7:00 PM</p>
       <h2>Location</h2>
       <p>Unit 19 MR Building Pitpitan St., cor, Gunting St. San Roque, Marikina City (back of Marcos Highway McDonald's & Yellow Cab).</p>
       <h2>Contact us</h2>
